--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -232,7 +232,7 @@
 <!ENTITY Ctr_ntabhov		"悬停新标签页">
 <!ENTITY Ctr_bold			"加粗">
 <!ENTITY Ctr_italic			"斜体">
-<!ENTITY Ctr_underlined		"Underlined">
+<!ENTITY Ctr_underlined		"下载线">
 <!ENTITY Ctr_notabhov		"启用设置覆盖“悬停”设置">
 <!ENTITY Ctr_tabc_act_tb	"工具栏使用背景色">
 
@@ -269,9 +269,9 @@
 <!ENTITY Ctr_autocomplete	"自动完成弹出框">
 <!ENTITY Ctr_altautocompl	"备选的外观">
 <!ENTITY Ctr_autocompl_it	"移除 “使用...搜索” 和 “访问” 项目 (如果存在的话)">
-<!ENTITY Ctr_autocompl_hl	"Highlighting of text hits">
-<!ENTITY Ctr_autocompl_rhl	"Aero colors for highlighted results">
-<!ENTITY Ctr_autocompl_sep	"Show separator between results">
+<!ENTITY Ctr_autocompl_hl	"文本匹配时高亮">
+<!ENTITY Ctr_autocompl_rhl	"高亮结果使用 Aero 颜色">
+<!ENTITY Ctr_autocompl_sep	"在结果之间显示分隔符">
 <!ENTITY Ctr_urlbar_uc		"禁用 “统一自动完成” 功能">
 <!ENTITY Ctr_lbsugresi		"禁用高度限制">
 <!ENTITY Ctr_lbsugres		"结果数量">
@@ -302,7 +302,7 @@
 <!ENTITY Ctr_notabfog		"移除背景模糊 (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"移除背景颜色 (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"减少工具栏上方空间 (如果可以)">
-<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
+<!ENTITY Ctr_showalltabsb	"总是显示“所有标签页”按钮">
 <!ENTITY Ctr_alttabstb		"备选背景颜色">
 <!ENTITY Ctr_alttabstb2		"在最大化模式 (标签在顶部)">
 
@@ -365,12 +365,12 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"标签页上显示正在播放音频图标">
 <!ENTITY Ctr_fx42tabsaudico	"不选中此项，从标签页上移除“正在播放音频图标”。">
-<!ENTITY Ctr_e_containertab	"Container Tabs">
-<!ENTITY Ctr_fx50containert	"Unchecking this preference removes 'container tabs'.">
-<!ENTITY Ctr_e_findbarhl	"Findbar highlighting">
-<!ENTITY Ctr_fx50findbarhl	"Unchecking these preferences removes findbars 'highlight' features.">
+<!ENTITY Ctr_e_containertab	"容器标签页">
+<!ENTITY Ctr_fx50containert	"不选中此项以移除“容器标签页”。">
+<!ENTITY Ctr_e_findbarhl	"搜索栏高亮">
+<!ENTITY Ctr_fx50findbarhl	"不选中此项以移除搜索栏“高亮”功能。">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Unchecking this preference disables 'flyweb'.">
+<!ENTITY Ctr_fx50flyweb		"不选中此项以禁用“Flyweb”。">
 
 
 <!ENTITY Ctr_pw_settings	"设置">
