--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -132,7 +132,7 @@
 <!ENTITY Ctr_puibut_l_sep	"Nalěwo">
 <!ENTITY Ctr_puibut_r_sep	"Napšawo">
 <!ENTITY Ctr_html5warning	"Warnowanje połneje wobrazowki HTML5">
-<!ENTITY Ctr_oldtoplevimg	"Wobraze 'nejwušeje domeny': Klasiski wenkowny naglěd">
+<!ENTITY Ctr_oldtoplevimg	"Klasiski wenkowny naglěd na běłej slězynje">
 <!ENTITY Ctr_altalertbox	"'Warnowański kašćik': Alternatiwny wenkowny naglěd">
 <!ENTITY Ctr_emptygfavico	"Powšykny fawority symbol wuměniś">
 <!ENTITY Ctr_mstatusbar		"Pśesuwajobny wobcerk statusoweje rědki">
@@ -189,7 +189,7 @@
 <!ENTITY Ctr_bmbutpanelm	"Wuskokujucy meni: Naglěd menijowego wuskokujucego wokna">
 <!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: Meni 'Njesortěrowane cytańske znamjenja'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad cytańskimi znamjenjami">
-<!ENTITY Ctr_bmbviewbmsb	"Wuskokujucy meni: 'Bocnicu pokazaś' pokazaś">
+<!ENTITY Ctr_bmbviewbmsb	"Wuskokujucy meni: 'Bocnicu cytańskich znamjenjow pokazaś' pokazaś">
 <!ENTITY Ctr_bmbviewbmtb	"Wuskokujucy meni: 'Rědku cytańskich znamjenjow pokazaś' pokazaś">
 <!ENTITY Ctr_bmbnounsort	"Wuskokujucy meni: 'Njesortěrowane cytańske znamjenja' schowaś">
 <!ENTITY Ctr_bmbutnotext	"Tekst na rědce cytańskich znamjenjow schowaś">
@@ -232,7 +232,7 @@
 <!ENTITY Ctr_ntabhov		"Nowy rejtark (hover)">
 <!ENTITY Ctr_bold			"Tucny">
 <!ENTITY Ctr_italic			"Kursiwny">
-<!ENTITY Ctr_underlined		"Underlined">
+<!ENTITY Ctr_underlined		"Pódšmarnjony">
 <!ENTITY Ctr_notabhov		"Zmóžnjone nastajenja pśepisuju 'hover-nastajenja">
 <!ENTITY Ctr_tabc_act_tb	"Slězynowa barwa na symbolowych rědkach">
 
@@ -268,14 +268,15 @@
 <!ENTITY Ctr_searchbar		"Pytańske pólo">
 <!ENTITY Ctr_autocomplete	"Wuskokujuce wokno awtowudopołnjenja">
 <!ENTITY Ctr_altautocompl	"Alternatiwny naglěd">
-<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
-<!ENTITY Ctr_autocompl_hl	"Highlighting of text hits">
-<!ENTITY Ctr_autocompl_rhl	"Aero colors for highlighted results">
-<!ENTITY Ctr_autocompl_sep	"Show separator between results">
+<!ENTITY Ctr_autocompl_it	"Zapiska 'Pytaś z...' a 'Woglědaś' wótpóraś (jolic eksistěrujotej)">
+<!ENTITY Ctr_autocompl_hl	"Wuzwignjenje tekstowych wótpowědnikow">
+<!ENTITY Ctr_autocompl_rhl	"Aero-barwy za wuzwignjone wuslědki">
+<!ENTITY Ctr_autocompl_sep	"Źěleńsku liniju mjazy wuslědkami pokazaś">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'zjadnośone awotwudopołnjenje' znjemóžniś">
 <!ENTITY Ctr_lbsugresi		"Limit wusokosći znjemóžniś">
 <!ENTITY Ctr_lbsugres		"Licba wuslědkow">
 <!ENTITY Ctr_lbsbradius		"Swójski ramikowy wokłon za adresowe pólo a pytańske polo">
+
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
 <!ENTITY Ctr_extrabar		"Pśidatne symbolowe rědki">
 <!ENTITY Ctr_extrabar0		"Pśidatne symbolowe rědki">
@@ -293,7 +294,7 @@
 <!ENTITY Ctr_mbarforceright	"Slědny element">
 
 <!ENTITY Ctr_toolbars		"Nastajenja symboloweje rědki">
-<!ENTITY Ctr_dblclnewtab	"Dwójne kliknjenje wócynja 'nowy' rejtark">
+<!ENTITY Ctr_dblclnewtab	"Dwójne kliknjenje na symbolowu rědku wócynja nowy rejtark">
 <!ENTITY Ctr_hidetbwot		"Rejtarkowu rědku z jano jadnym rejtarkom schowaś">
 <!ENTITY Ctr_hidetbwote		"Wokomuźenje pśi startowanju reducěrowaś">
 <!ENTITY Ctr_hidetbwote_i	"To by mógło brachi na rejtarkowej rědce zawinowaś">
@@ -301,7 +302,7 @@
 <!ENTITY Ctr_notabfog		"Slězynowu młu wótpóraś (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"Slězynowu barwu wótpóraś (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"Mjazyrum wušej symboloweje rědki reducěrowaś (jolic móžno)">
-<!ENTITY Ctr_showalltabsb	"Always show 'all tabs' button">
+<!ENTITY Ctr_showalltabsb	"Tłocašk 'wšykne rejtarki' pśecej pokazaś">
 <!ENTITY Ctr_alttabstb		"Alternatiwna slězynowa barwa">
 <!ENTITY Ctr_alttabstb2		"W maksiměrowanem naglěźe (rejtarki górjejce)">
 
@@ -326,14 +327,14 @@
 <!ENTITY Ctr_nonavbarbg2	"Nastajenje ma wustatkowanje na wšykne rědki w pśedstajenju Slim dodanka 'Beyond Australis'.">
 <!ENTITY Ctr_nonavborder	"Górny ramik symbolowej rědce pśidaś">
 <!ENTITY Ctr_nonavtbborder	"Górne symbolowe rědki: Ramiki symboloweje rědki wótpóraś">
-<!ENTITY Ctr_hidesbclose	"Bócnice: Tłocašk 'Zacyniś' bócnice schowaś">
+<!ENTITY Ctr_hidesbclose	"Bocnice: Tłocašk 'Zacyniś' schowaś">
 <!ENTITY Ctr_notextshadow	"Symbolowe rědki: Seń za tekst symboloweje rědki a rejtarki schowaś">
 <!ENTITY Ctr_chevronfix		"Nawigaciska rědka: Dwójnu šypku ('Dalšne rědy') na kóńcu rědki schowaś">
 <!ENTITY Ctr_tbsep_winc		"Górjejcne symbolowe rědki: Pśidatne źěleńske linije">
 
 <!ENTITY Ctr_closeabarbut	"Tłocašk 'Zacyniś' na rědce dodankow schowaś">
 <!ENTITY Ctr_highaddonsbar	"Wusokosć pówětšyś">
-<!ENTITY Ctr_lessaddonsbar	"Decrease height">
+<!ENTITY Ctr_lessaddonsbar	"Wusokosć pomjeńšyś">
 <!ENTITY Ctr_addonbarfs		"W modusu połneje wobrazowki">
 
 <!ENTITY Ctr_animation		"Animacija">
@@ -364,12 +365,12 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowótgrawanje na rejtarkach">
 <!ENTITY Ctr_fx42tabsaudico	"Gaž znjemóžnijośo toś to nastajenje, wótpórajo se 'symbol za awdiowótgrawanje' z rejtarkow.">
-<!ENTITY Ctr_e_containertab	"Container Tabs">
-<!ENTITY Ctr_fx50containert	"Unchecking this preference removes 'container tabs'.">
-<!ENTITY Ctr_e_findbarhl	"Findbar highlighting">
-<!ENTITY Ctr_fx50findbarhl	"Unchecking these preferences removes findbars 'highlight' features.">
+<!ENTITY Ctr_e_containertab	"Kontejnerowe rejtarki">
+<!ENTITY Ctr_fx50containert	"Gaž se toś to nastajenje znjemóžnijo, se 'kontejnerowe rejtarki' wótpóraju.">
+<!ENTITY Ctr_e_findbarhl	"Wuzwignjenje pytańskego póla">
+<!ENTITY Ctr_fx50findbarhl	"Gaž se toś te nastajenja znjemóžniju, se 'wuzwignjeńske' funkcije wótpóraju.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Unchecking this preference disables 'flyweb'.">
+<!ENTITY Ctr_fx50flyweb		"Gaž se toś to nastajenje znjemóžnijo, se 'flyweb' znjemóžnijo.">
 
 
 <!ENTITY Ctr_pw_settings	"Nastajenja">
@@ -391,7 +392,7 @@
 <!ENTITY appMenuGettingStarted.label	"Prědne kšace">
 <!ENTITY goCmd.label					"Start">
 <!ENTITY Ctr_menu_restart.label			"Znowego startowaś">
-<!ENTITY Ctr_restartapp					"Znowego startowaś pód tłocaškom '&brandShortName;' a w meniju Dataja">
+<!ENTITY Ctr_restartapp					"Znowego startowaś w meniju '&brandShortName;' a w meniju Dataja pokazaś">
 
 <!ENTITY Ctr_openInCurrentTab			"Zapódaśa w aktualnem rejtarku wócyniś">
 <!ENTITY Ctr_openInNewTab				"Zapódaśa w nowem rejtarku wócyniś">
