et options.dtd update

--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -269,8 +269,8 @@
 <!ENTITY Ctr_autocomplete	"Automaatlõpetamise hüpik">
 <!ENTITY Ctr_altautocompl	"Alternatiivne välimus">
 <!ENTITY Ctr_autocompl_it	"Eemalda kirjed 'Otsi otsingumootoriga...' ja 'Külasta' (kui on)">
-<!ENTITY Ctr_autocompl_hl	"Sisestatavale tekstile vastava teksti esiletõstmine">
-<!ENTITY Ctr_autocompl_rhl	"Aero colors for highlighted results">
+<!ENTITY Ctr_autocompl_hl	"Sisestatule vastava teksti esiletõstmine">
+<!ENTITY Ctr_autocompl_rhl	"Aero värvid esiletõstetud tulemuste tähistamiseks">
 <!ENTITY Ctr_autocompl_sep	"Näita tulemuste vahel eraldusjooni">
 <!ENTITY Ctr_urlbar_uc		"Keela ühtse automaatlõpetamise funktsioon 'unified autocomplete'">
 <!ENTITY Ctr_lbsugresi		"Keela kõrguse piirang">
@@ -365,10 +365,10 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Heli esitamise ikoon kaartidel">
 <!ENTITY Ctr_fx42tabsaudico	"Sellelt eelistuselt märke eemaldamine eemaldab kaartidelt 'heli esitamise ikooni'.">
-<!ENTITY Ctr_e_containertab	"Ümbriskaardid">
-<!ENTITY Ctr_fx50containert	"Sellelt eelistuselt märke eemaldamine keelab ümbriskaartide funktsiooni 'container tabs'.">
+<!ENTITY Ctr_e_containertab	"Konteinerkaardid">
+<!ENTITY Ctr_fx50containert	"Sellelt eelistuselt märke eemaldamine keelab konteinerkaartide funktsiooni 'container tabs'.">
 <!ENTITY Ctr_e_findbarhl	"Otsinguribal esiletõstmine">
-<!ENTITY Ctr_fx50findbarhl	"Nendelt eelistustelt märke eemaldamine keelab otsinguriba esiletõstmise võimalused.">
+<!ENTITY Ctr_fx50findbarhl	"Nendelt eelistustelt märke eemaldamine keelab otsinguribal esiletõstmise võimalused.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
 <!ENTITY Ctr_fx50flyweb		"Sellelt eelistuselt märke eemaldamine keelab funktsiooni 'Flyweb'.">
 
