--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -385,8 +385,12 @@
 <!ENTITY Ctr_special_font	"Hintergrundfarbeinstellungen sind nur für das Standard-Thema vorhanden!">
 <!ENTITY Ctr_special_info	"Einige Optionen haben nur in bestimmten Fällen sichtbare Auswirkungen!">
 <!ENTITY Ctr_special_info2	"Vollständiges 'Thema' erkannt! Einige Einstellungen funktionieren nicht mit Themen!">
-<!ENTITY Ctr_support		"Hilfe-Forum">
-<!ENTITY Ctr_newversion		"Neue Version?">
+<!ENTITY Ctr_special_acr	"Probleme nur über offizielle Hilfskanäle melden und nicht über 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_support		"Hilfe">
+<!ENTITY Ctr_support_forum1	"MozillaZine (Englisches Forum)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (Deutsches Forum)">
+<!ENTITY Ctr_github_issues	"Problem melden auf Github">
+<!ENTITY Ctr_newversion		"Neue Version suchen">
 
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Erste Schritte">
