--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -385,8 +385,12 @@
 <!ENTITY Ctr_special_font	"As configurações da cor do fundo são só para o tema padrão!">
 <!ENTITY Ctr_special_info	"Algumas opções podem oferecer alterações visuais só em certos casos!">
 <!ENTITY Ctr_special_info2	"As configurações são feitas para o tema padrão do &brandShortName;, e podem não funcionar com temas de terceiros!">
-<!ENTITY Ctr_support		"Forum de suporte">
-<!ENTITY Ctr_newversion		"Há uma nova versão?">
+<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_support		"Support">
+<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
+<!ENTITY Ctr_github_issues	"Report issue on Github">
+<!ENTITY Ctr_newversion		"Check for new version">
 
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Guia rápido">
