--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -385,8 +385,12 @@
 <!ENTITY Ctr_special_font	"Nastavení pozadí ovlivní pouze výchozí vzhled!">
 <!ENTITY Ctr_special_info	"Některé volby nemusí vzhled vůbec ovlivnit">
 <!ENTITY Ctr_special_info2	"Možnosti jsou pro výchozí vzhled &brandShortName; a nemusí fungovat s jinými nainstalovanými vzhledy!">
-<!ENTITY Ctr_support		"Fórum podpory">
-<!ENTITY Ctr_newversion		"Nová verze?">
+<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_support		"Support">
+<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
+<!ENTITY Ctr_github_issues	"Report issue on Github">
+<!ENTITY Ctr_newversion		"Check for new version">
 
 <!ENTITY Ctr_addon-bar.accesskey		"D">
 <!ENTITY appMenuGettingStarted.label	"Začínáme">
