--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -385,8 +385,12 @@
 <!ENTITY Ctr_special_font	"Nastajenja za slězynowu barwu su jano za standardnu drastwu!">
 <!ENTITY Ctr_special_info	"Někotare nastajenja njepóbituju wizuelne změny we wšych padach!">
 <!ENTITY Ctr_special_info2	"Drastwa tśeśego póbitowarja jo se namakała! Někotare nastajenja njefunkcioněruju z drastwami tśeśich póbitowarjow!">
-<!ENTITY Ctr_support		"Pódpěrowański forum">
-<!ENTITY Ctr_newversion		"Nowa wersija?">
+<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_support		"Support">
+<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
+<!ENTITY Ctr_github_issues	"Report issue on Github">
+<!ENTITY Ctr_newversion		"Check for new version">
 
 <!ENTITY Ctr_addon-bar.accesskey		"R">
 <!ENTITY appMenuGettingStarted.label	"Prědne kšace">
