--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -385,8 +385,12 @@
 <!ENTITY Ctr_special_font	"¡Las configuraciones de color de fondo son sólo para el tema decorativo predeterminado!">
 <!ENTITY Ctr_special_info	"¡Algunas opciones podrían no ofrecer cambios visuales en todos los casos!">
 <!ENTITY Ctr_special_info2	"¡Detectado tema decorativo de terceros! ¡Algunas opciones no funcionarán con ellos!">
-<!ENTITY Ctr_support		"Foro de soporte">
-<!ENTITY Ctr_newversion		"¿Nueva versión?">
+<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_support		"Support">
+<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
+<!ENTITY Ctr_github_issues	"Report issue on Github">
+<!ENTITY Ctr_newversion		"Check for new version">
 
 <!ENTITY Ctr_addon-bar.accesskey		"C">
 <!ENTITY appMenuGettingStarted.label	"Comenzar">
