--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -385,8 +385,12 @@
 <!ENTITY Ctr_special_font	"Taustavärvi sätted on ainult vaikimisi välimuse jaoks!">
 <!ENTITY Ctr_special_info	"Mõned sätted ei pruugi alati nähtavaid muudatusi pakkuda">
 <!ENTITY Ctr_special_info2	"Tuvastati kolmanda osapoole välimus! Mõned sätted ei tööta kolmandate osapoolte välimustega!">
-<!ENTITY Ctr_support		"Kasutajatoe foorum">
-<!ENTITY Ctr_newversion		"Uus versioon?">
+<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_support		"Support">
+<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
+<!ENTITY Ctr_github_issues	"Report issue on Github">
+<!ENTITY Ctr_newversion		"Check for new version">
 
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Alustamine">
