--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -385,8 +385,12 @@
 <!ENTITY Ctr_special_font	"La personnalisation de la couleur d'arrière-plan est réservée au thème par défaut !">
 <!ENTITY Ctr_special_info	"Certaines options peuvent ne pas toujours offrir de changements visibles.">
 <!ENTITY Ctr_special_info2	"Thème de tierce partie détecté ! Certains paramètres ne fonctionnent pas avec de tels thèmes !">
-<!ENTITY Ctr_support		"Forum d'assistance">
-<!ENTITY Ctr_newversion		"Nouvelle version ?">
+<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_support		"Support">
+<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
+<!ENTITY Ctr_github_issues	"Report issue on Github">
+<!ENTITY Ctr_newversion		"Check for new version">
 
 <!ENTITY Ctr_addon-bar.accesskey		"U">
 <!ENTITY appMenuGettingStarted.label	"Commencer">
