--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -385,12 +385,12 @@
 <!ENTITY Ctr_special_font	"Ustawienia koloru tła są tylko dla domyślnego motywu!">
 <!ENTITY Ctr_special_info	"Niektóre opcje mogą nie oferować widocznych zmian we wszystkich przypadkach">
 <!ENTITY Ctr_special_info2	"Wykryto motyw autorstwa osób trzecich! Niektóre opcje nie działają z motywami autorstwa osób trzecich!">
-<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
-<!ENTITY Ctr_support		"Support">
-<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
-<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
-<!ENTITY Ctr_github_issues	"Report issue on Github">
-<!ENTITY Ctr_newversion		"Check for new version">
+<!ENTITY Ctr_special_acr	"Zgłaszaj problemy tylko za pomocą oficjalnych kanałów wsparcia, a nie korzystając z 'Reportera kompatybilności dodatków'!">
+<!ENTITY Ctr_support		"Pomoc">
+<!ENTITY Ctr_support_forum1	"MozillaZine (forum w języku angielskim)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (forum w języku niemieckim)">
+<!ENTITY Ctr_github_issues	"Zgłoś problem na GitHubie">
+<!ENTITY Ctr_newversion		"Sprawdź, czy jest nowa wersja">
 
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Pierwsze kroki">
