--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -385,12 +385,12 @@
 <!ENTITY Ctr_special_font	"背景色の設定はデフォルトテーマのみに適用されます。">
 <!ENTITY Ctr_special_info	"一部オプションは特定の条件でのみ動作します。">
 <!ENTITY Ctr_special_info2	"設定は &brandShortName; デフォルトテーマ用に作成されたもので、サードパーティのテーマで動作しない可能性があります。">
-<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
-<!ENTITY Ctr_support		"Support">
-<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
-<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
-<!ENTITY Ctr_github_issues	"Report issue on Github">
-<!ENTITY Ctr_newversion		"Check for new version">
+<!ENTITY Ctr_special_acr	"Add-on Compatibility Reporter を使用して問題を報告しないでください!　問題の報告は公式サポートチャンネルを使用してください。">
+<!ENTITY Ctr_support		"サポート">
+<!ENTITY Ctr_support_forum1	"MozillaZine (英語フォーラム)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (ドイツ語フォーラム)">
+<!ENTITY Ctr_github_issues	"Githubで問題を報告">
+<!ENTITY Ctr_newversion		"更新を確認">
 
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"入門">
