--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -184,7 +184,7 @@
 <!ENTITY Ctr_addonversion	"Laienduste loendid: näita lisade versiooni">
 <!ENTITY Ctr_xpinstallui	"Vana lisade paigaldamise aken">
 <!ENTITY Ctr_bmbutton		"Järjehoidjate menüü nupp">
-<!ENTITY Ctr_hiderecentbm	"Järjehoidjate hüpik: Peida viimati lisatud järjehoidjad">
+<!ENTITY Ctr_hiderecentbm	"Järjehoidjate hüpik: peida viimati lisatud järjehoidjad">
 <!ENTITY Ctr_hideeditbm		"Järjehoidjate täht: peida hüpik (kui leht pole järjehoidjates)">
 <!ENTITY Ctr_bmbutpanelm	"Menüühüpik: paneelimenüü välimus">
 <!ENTITY Ctr_bmbunsortbm	"Menüühüpik: alammenüü 'Sortimata järjehoidjad'">
@@ -385,12 +385,12 @@
 <!ENTITY Ctr_special_font	"Taustavärvi sätted on ainult vaikimisi välimuse jaoks!">
 <!ENTITY Ctr_special_info	"Mõned sätted ei pruugi alati nähtavaid muudatusi pakkuda">
 <!ENTITY Ctr_special_info2	"Tuvastati kolmanda osapoole välimus! Mõned sätted ei tööta kolmandate osapoolte välimustega!">
-<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
-<!ENTITY Ctr_support		"Support">
-<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
-<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
-<!ENTITY Ctr_github_issues	"Report issue on Github">
-<!ENTITY Ctr_newversion		"Check for new version">
+<!ENTITY Ctr_special_acr	"Teavita vigadest ainult ametlike kasutajatoe kanalite kaudu ja mitte lisaga 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_support		"Kasutajatugi">
+<!ENTITY Ctr_support_forum1	"MozillaZine (ingliskeelne foorum)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (saksakeelne foorum)">
+<!ENTITY Ctr_github_issues	"Teavita veast teenuse Github kaudu">
+<!ENTITY Ctr_newversion		"Vaata, kas on uut versiooni">
 
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Alustamine">
