--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -294,7 +294,8 @@
 <!ENTITY Ctr_mbarforceright	"Poslední element">
 
 <!ENTITY Ctr_toolbars		"Nastavení lišt">
-<!ENTITY Ctr_dblclnewtab	"Dvojklik otevře nový panel (s adresou dle předvolby browser.newtab.url)">
+<!ENTITY Ctr_dblclnewtab	"Dvojklik otevře nový panel">
+<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
 <!ENTITY Ctr_hidetbwot		"Skrývat lištu s pouze jedním panelem">
 <!ENTITY Ctr_hidetbwote		"Snížení prodlevy skrytí při spouštění">
 <!ENTITY Ctr_hidetbwote_i	"Může způsobit chyby na liště panelů">
