--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -295,6 +295,7 @@
 
 <!ENTITY Ctr_toolbars		"Værktøjslinjer">
 <!ENTITY Ctr_dblclnewtab	"Dobbeltklik åbner et 'nyt' faneblad">
+<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
 <!ENTITY Ctr_hidetbwot		"Skjul fanebladslinjen når der kun er ét faneblad">
 <!ENTITY Ctr_hidetbwote		"Reducér forsinkelse ved skjulning under opstart">
 <!ENTITY Ctr_hidetbwote_i	"Kan give fejl på fanebladenes værktøjslinje">
