--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -295,6 +295,7 @@
 
 <!ENTITY Ctr_toolbars		"Barres d'outils">
 <!ENTITY Ctr_dblclnewtab	"Un double-clic sur la barre ouvre un nouvel onglet">
+<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
 <!ENTITY Ctr_hidetbwot		"Masquer la barre lorsqu'un seul onglet est visible">
 <!ENTITY Ctr_hidetbwote		"Diminuer le délai pour masquer la barre au démarrage">
 <!ENTITY Ctr_hidetbwote_i	"Pourrait provoquer des défauts sur la barre des onglets">
