--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -295,6 +295,7 @@
 
 <!ENTITY Ctr_toolbars		"Nastajenja symboloweje lajsty">
 <!ENTITY Ctr_dblclnewtab	"Dwójne kliknjenje na symbolowu lajstu wočinja nowy rajtark">
+<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
 <!ENTITY Ctr_hidetbwot		"Rajtarkowu lajstu z jenož jednym rajtarkom schować">
 <!ENTITY Ctr_hidetbwote		"Komdźenje chowanja při startowanju redukować">
 <!ENTITY Ctr_hidetbwote_i	"To móhło brachi na rajtarkowej lajsće zawinować">
