--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -295,6 +295,7 @@
 
 <!ENTITY Ctr_toolbars		"Barras de ferramentas">
 <!ENTITY Ctr_dblclnewtab	"Clicar duas vezes para abrir a 'nova' aba">
+<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
 <!ENTITY Ctr_hidetbwot		"Ocultar as barras de abas com uma aba">
 <!ENTITY Ctr_hidetbwote		"Reduzir o atraso ao ocultar na inicialização">
 <!ENTITY Ctr_hidetbwote_i	"Could cause glitches on tabs toolbar">
