--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -294,7 +294,8 @@
 <!ENTITY Ctr_mbarforceright	"Son öge">
 
 <!ENTITY Ctr_toolbars		"Araç çubuğu ayarları">
-<!ENTITY Ctr_dblclnewtab	"Çift tıklama 'yeni' sekme açar (using browser.newtab.url)">
+<!ENTITY Ctr_dblclnewtab	"Çift tıklama 'yeni' sekme açar">
+<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
 <!ENTITY Ctr_hidetbwot		"Sekme ile araç çubuğunu bir sekme ile gizle">
 <!ENTITY Ctr_hidetbwote		"Reduce hiding delay on startup">
 <!ENTITY Ctr_hidetbwote_i	"Sekme araç çubuğunda hatalara neden olabilir">
