--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -294,7 +294,8 @@
 <!ENTITY Ctr_mbarforceright	"Останній елемент">
 
 <!ENTITY Ctr_toolbars		"Налаштування панелі">
-<!ENTITY Ctr_dblclnewtab	"Подвійний клік відкриває нову вкладку (використовує адресу нової вкладки браузера)">
+<!ENTITY Ctr_dblclnewtab	"Подвійний клік відкриває нову вкладку">
+<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
 <!ENTITY Ctr_hidetbwot		"Приховувати панель вкладок з одною вкладкою">
 <!ENTITY Ctr_hidetbwote		"Зменшити затримки приховування при запуску">
 <!ENTITY Ctr_hidetbwote_i	"Може викликати перебої на панелі вкладок">
