--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -294,7 +294,8 @@
 <!ENTITY Ctr_mbarforceright	"最后一个元素">
 
 <!ENTITY Ctr_toolbars		"工具栏">
-<!ENTITY Ctr_dblclnewtab	"双击新建标签页 (使用 browser.newtab.url 设置)">
+<!ENTITY Ctr_dblclnewtab	"双击新建标签页">
+<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
 <!ENTITY Ctr_hidetbwot		"当只有一个标签页时隐藏标签页栏">
 <!ENTITY Ctr_hidetbwote		"启动时减少隐藏延迟">
 <!ENTITY Ctr_hidetbwote_i	"可能会导致标签页工具栏闪烁">
