--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -295,6 +295,7 @@
 
 <!ENTITY Ctr_toolbars		"Toolbars">
 <!ENTITY Ctr_dblclnewtab	"Double click on toolbar opens a new tab">
+<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
 <!ENTITY Ctr_hidetbwot		"Hide tabs toolbar with only one visible tab">
 <!ENTITY Ctr_hidetbwote		"Reduce hiding delay on startup">
 <!ENTITY Ctr_hidetbwote_i	"Could cause glitches on tabs toolbar">
