--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -295,7 +295,7 @@
 
 <!ENTITY Ctr_toolbars		"Orodne vrstice">
 <!ENTITY Ctr_dblclnewtab	"Dvojni klik odpre 'nov' zavihek">
-<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
+<!ENTITY Ctr_dblclnewtabdes	"Ni primerno za vse celotne teme, ko je dejavna nazivna vrstica Windows.">
 <!ENTITY Ctr_hidetbwot		"Skrij orodno vrstico zavihkov okna s samo enim zavihkom">
 <!ENTITY Ctr_hidetbwote		"Zmanjšaj zakasnitev skritja ob zagonu">
 <!ENTITY Ctr_hidetbwote_i	"Lahko povzroči napake na vrstici zavihkov">
