--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -295,7 +295,7 @@
 
 <!ENTITY Ctr_toolbars		"工具栏">
 <!ENTITY Ctr_dblclnewtab	"双击新建标签页">
-<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
+<!ENTITY Ctr_dblclnewtabdes	"当窗口标题栏激活时，对所有完整的主题都不适用。">
 <!ENTITY Ctr_hidetbwot		"当只有一个标签页时隐藏标签页栏">
 <!ENTITY Ctr_hidetbwote		"启动时减少隐藏延迟">
 <!ENTITY Ctr_hidetbwote_i	"可能会导致标签页工具栏闪烁">
@@ -386,12 +386,12 @@
 <!ENTITY Ctr_special_font	"只有默认主题才能设置背景颜色!">
 <!ENTITY Ctr_special_info	"一些选项可能无法在所有情况下提供视觉变化!">
 <!ENTITY Ctr_special_info2	"有些设置只能在 &brandShortName; 默认主题中生效，第三方主题可能无法生效!">
-<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
-<!ENTITY Ctr_support		"Support">
-<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
-<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
-<!ENTITY Ctr_github_issues	"Report issue on Github">
-<!ENTITY Ctr_newversion		"Check for new version">
+<!ENTITY Ctr_special_acr	"请到官方支持渠道报告问题，不要使用“Add-on Compatibility Reporter”！">
+<!ENTITY Ctr_support		"支持">
+<!ENTITY Ctr_support_forum1	"MozillaZine (英语论坛)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (德语论坛)">
+<!ENTITY Ctr_github_issues	"在 Github 上汇报 Issue">
+<!ENTITY Ctr_newversion		"检查新版本">
 
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"开始使用">
