--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -295,7 +295,7 @@
 
 <!ENTITY Ctr_toolbars		"ツールバー全般">
 <!ENTITY Ctr_dblclnewtab	"ツールバーをダブルクリックで新しいタブを開く">
-<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
+<!ENTITY Ctr_dblclnewtabdes	"アクティブなWindowsタイトルバーを持つ完全なテーマには適していません。">
 <!ENTITY Ctr_hidetbwot		"タブがひとつの時はタブバーを隠す">
 <!ENTITY Ctr_hidetbwote		"起動時に非表示になるまでの遅延を減少させる">
 <!ENTITY Ctr_hidetbwote_i	"タブバーに不具合が発生する可能性があります。">
