--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -295,7 +295,7 @@
 
 <!ENTITY Ctr_toolbars		"Tööriistaribad">
 <!ENTITY Ctr_dblclnewtab	"Kaartide ribal topeltklõpsamine avab uue kaardi">
-<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
+<!ENTITY Ctr_dblclnewtabdes	"Ei sobi kõikide täielike välimustega, kui Windowsi tiitliriba on aktiivne.">
 <!ENTITY Ctr_hidetbwot		"Ainult ühe nähtava kaardi korral peida kaartide riba">
 <!ENTITY Ctr_hidetbwote		"Vähenda peitmise viivitust käivitumisel">
 <!ENTITY Ctr_hidetbwote_i	"Võib põhjustada kaartide riba tõrkeid">
